Fix header alignment and responsiveness

--- a/style.css
+++ b/style.css
@@ -47,16 +47,30 @@
     isolation: isolate;
   }
 
+  /* PAGE STYLE */
+  :root{
+    --main-color:#4A4E69;
+    --secondary-color:#F2E9E4;
+    --darker-main-color:#22223B;
+    --darker-secondary-color:#C9ADA7;
+    --third-color:#9A8C98;
+  }
+
   body{
     font-family: 'Archivo Narrow';
     font-size: 1rem;
   }
   header{
+    background-color:var(--main-color);
+    position:relative;
+    color:var(--secondary-color);
     display: flex;
-    margin:0.5rem 1rem;;
-    padding:0.5rem;
+    padding:1rem 6rem; 
+    gap:3rem;
+    
+    display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content:space-between;
   }
 
   header .logo{
@@ -66,11 +80,43 @@
  
   ul {
     list-style: none;
+    padding: 0;
+    margin: 0;
     display: flex;
-    gap:1rem;
-    font-size: 1.2rem;
+    gap:1.3rem;
+    font-size: 1.3rem;
   }
 
   #language-switch{
-    width: 4rem;
+    position:absolute;
+    right:2rem;
+  }
+
+  ul a {
+    text-decoration: none;
+    color:inherit;
+    font-weight: 500;
+  }
+  ul a:hover{
+    color:var(--darker-secondary-color);
+    text-shadow: 1px var(--darker-secondary-color);
+  }
+
+  /* CSS for mobile devices */
+@media screen and (max-width: 768px) {
+    header {
+      padding: 1rem;
+      flex-direction: column;
+      gap:0.5rem;
+    }
+    ul {
+      gap: 1rem; 
+    }
+    ul a {
+      font-size: 1.2rem; 
+    }
+    #language-switch { 
+      right:1rem;
+      top:2rem;
+    }
   }
